# CG

./: .gitignore  CG.sln
CG/: CG.vcxproj
Exp1/: CMakeLists.txt  Exp1.vcxproj  main.cpp
Exp1_GLFW/: CMakeLists.txt  Exp1_GLFW.vcxproj  Exp1_GLFW.vcxproj.filters  lightingShader.fs  main.cpp  shader.fs  shader.h  shader.vs
Exp2/: Exp2.vcxproj  Exp2.vcxproj.filters  main  main.cpp  makefile  shader.fs  shader.vs
Exp3/: CMakeLists.txt  global.h  mPoint.h  mWindow.h  main  main.cpp  makefile  shader.fs
Exp3/shaders/: shader.fs  shader.vs
Exp3_MEM/: CMakeLists.txt  LTDraw.hpp  LTPoint.h  LTPolygon.hpp  LTWindow.hpp  main.cpp  main.h
Exp3_MEM/shaders/: shader.fs  shader.vs
include/glad/: glad.h
include/my_util/: camera.h  shader.cpp  shader.h
